<resources>
    <string name="app_name">SeSeva</string>
    <string name="shared_pref">com.spandverse.seseva.SHARED_PREF</string>
    <string name="email_link">com.spandverse.seseva.EMAIL_LINK</string>
    <string name="email_address">com.spandverse.seseva.EMAIL_ADDRESS</string>
    <string name="user_name">com.spandverse.seseva.USER_NAME</string>
    <string name="load_data">com.spandverse.seseva.LOAD_DATA</string>
    <string name="missions_updated_today">com.spandverse.seseva.MISSIONS_UPDATED_TODAY</string>
    <string name="chosen_mission_number">com.spandverse.seseva.CHOSEN_MISSION_NUMBER</string>
    <string name="rules_shown">com.spandverse.seseva.RULES_SHOWN</string>
    <string name="saved_rules_number">com.spandverse.seseva.SAVED_RULES_NUMBER</string>
    <string name="service_state">com.spandverse.seseva.SERVICE_STATE</string>
    <string name="days_after_installation">com.spandverse.seseva.DAYS_AFTER_INSTALLATION</string>
    <string name="entertainment_time">com.spandverse.seseva.ENTERTAINMENT_TIME</string>
    <string name="entertainment_launches">com.spandverse.seseva.ENTERTAINMENT_LAUNCHES</string>
    <string name="money_to_be_updated">com.spandverse.seseva.MONEY_TO_BE_UPDATED</string>
    <string name="daily_reward">com.spandverse.seseva.DAILY_REWARD</string>
    <string name="weekly_reward">com.spandverse.seseva.WEEKLY_REWARD</string>
    <string name="update_contributions_cloud">com.spandverse.seseva.UPDATE_CONTRI_CLOUD</string>
    <string name="rules_number">com.spandverse.seseva.RULES_NUMBER</string>
    <string name="social_max_time">com.spandverse.seseva.SOCIAL_MAX_TIME</string>
    <string name="social_max_launches">com.spandverse.seseva.SOCIAL_MAX_LAUNCHES</string>
    <string name="social_penalty">com.spandverse.seseva.SOCIAL_PENALTY</string>
    <string name="communication_max_time">com.spandverse.seseva.COMMUNICATION_MAX_TIME</string>
    <string name="communication_max_launches">com.spandverse.seseva.COMMUNICATION_MAX_LAUNCHES</string>
    <string name="communication_penalty">com.spandverse.seseva.COMMUNICATION_PENALTY</string>
    <string name="games_max_time">com.spandverse.seseva.GAMES_MAX_TIME</string>
    <string name="games_max_launches">com.spandverse.seseva.GAMES_MAX_LAUNCHES</string>
    <string name="games_penalty">com.spandverse.seseva.GAMES_PENALTY</string>
    <string name="video_max_time">com.spandverse.seseva.VIDEO_MAX_TIME</string>
    <string name="video_max_launches">com.spandverse.seseva.VIDEO_MAX_LAUNCHES</string>
    <string name="video_penalty">com.spandverse.seseva.VIDEO_PENALTY</string>
    <string name="msnbs_max_time">com.spandverse.seseva.MSNBS_MAX_TIME</string>
    <string name="msnbs_max_launches">com.spandverse.seseva.MSNBS_MAX_LAUNCHES</string>
    <string name="msnbs_penalty">com.spandverse.seseva.MSNBS_PENALTY</string>
    <string name="entertainment_max_time">com.spandverse.seseva.ENTERTAINMENT_MAX_TIME</string>
    <string name="entertainment_max_launches">com.spandverse.seseva.ENTERTAINMENT_MAX_LAUNCHES</string>
    <string name="entertainment_penalty">com.spandverse.seseva.ENTERTAINMENT_PENALTY</string>
    <string name="others_max_time">com.spandverse.seseva.OTHERS_MAX_TIME</string>
    <string name="others_max_launches">com.spandverse.seseva.OTHERS_MAX_LAUNCHES</string>
    <string name="others_penalty">com.spandverse.seseva.OTHERS_PENALTY</string>
    <string name="user_level">com.spandverse.seseva.USER_LEVEL</string>
    <string name="onboarding_done">com.spandverse.seseva.ONBOARDING_DONE</string>
    <string name="service_mode">com.spandverse.seseva.SERVICE_MODE</string>
    <string name="mode_changed">com.spandverse.seseva.MODE_CHANGED</string>
    <string name="count">com.spandverse.seseva.COUNT</string>
    <string name="show_strict_banner">com.spandverse.seseva.SHOW_STRICT_B</string>
    <string name="autostart_permission_asked">com.spandverse.seseva.AUTOSTART_PERMISSION_ASKED</string>
    <string name="active_missions">com.spandverse.seseva.ACTIVE_MISSIONS</string>
    <string name="total_missions">com.spandverse.seseva.TOTAL_MISSIONS</string>
    <string name="authenticate_to_delete">com.spandverse.seseva.AUTHENTICATE_TO_DELETE</string>
    <string name="refresh_rules">com.spandverse.seseva.REFRESH_RULES</string>
    <string name="delete_action">com.spandverse.seseva.DELETE_ACTION</string>
    <string name="signout_action">com.spandverse.seseva.SIGNOUT_ACTION</string>
    <string name="report_download_id">com.spandverse.seseva.REPORT_DOWNLOAD_ID</string>
    <string name="non_zero_penalty">com.spandverse.seseva.NON_ZERO_PENALTY</string>
    <string name="app_check_done">com.spandverse.seseva.APP_CHECK_DONE</string>
    <string name="mison_i_sown">com.spandverse.seseva.MISON_I_SOWN</string>
    <string name="rules_i_sown">com.spandverse.seseva.RULES_I_SOWN</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome_back">Welcome back %1$s</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_list_installed_apps_and_sign_out">ListInstalledAppsAndSignOut</string>
    <string name="foreground_service_notification_channel_id" translatable="false">foreground_channel</string>
    <string name="foreground_service_notification_channel_name" translatable="false">Foreground</string>
    <string name="notification_title">SeSEVA service running</string>
    <string name="contribution_update_notification_channel_id" translatable="false">contribution_update_channel</string>
    <string name="contribution_update_notification_channel_name" translatable="false">ContributionUpdate</string>
    <string name="usage_alert_notification_channel_id" translatable="false">usage_alert_channel</string>
    <string name="usage_alert_notification_channel_name" translatable="false">UsageAlert</string>
    <string name="usage_alert_title">Usage Alert</string>
    <string name="usage_alert_notification_channel_description">ChannelDescription</string>
    <string name="hello_world">Hello Square World!</string>
    <string name="sign_out">Sign Out</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="go_to_sign_out">Go To Sign Out</string>
    <string name="installed_apps_list"><![CDATA[<h3>APPS INSTALLED ON YOUR DEVICE</h3>]]></string>
    <string name="installed_app_name"><![CDATA[<b>App Name:</b>]]></string>
    <string name="installed_app_package_name"><![CDATA[<b>Package Name:</b>]]></string>
    <string name="go_to_foreground_service_fragment">Go To Foreground Service Fragment</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">stop Service</string>
    <string name="proceed">Proceed</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="done">Done</string>
    <string name="rules_guide">\u25CF If you don\'t break any rule, you raise Rs %1$d.\n\u25CF If you break a rule (e.g. Social), you raise\nRs %1$d - Penalty(Rs %2$d) = Rs %3$d.\n\u25CF In case the total penalties exceed the reward, you would raise Rs 0.\n\u25CF If you follow weekly rules, you raise Rs %4$d extra, once every week.</string>
    <string name="hi_there_i_">Hi there,\nI am Spandy</string>
    <string name="sign_in">SIGN IN</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="sponsoring_an_ongoing_mission">sponsoring an ongoing mission</string>
    <string name="by_signing">By signing up you are agreeing to the \nTerms of Use and Privacy Policy</string>
    <string name="or">OR</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="invalid_address_message">Please enter a valid email address &amp; try again!</string>
    <string name="no_internet_message">Make sure that Wi-Fi or your mobile data is turned on, and then try again.</string>
    <string name="no_internet_title">No Internet Connection</string>
    <string name="ok">OK</string>
    <string name="link_verification_title">Verify your Email</string>
    <string name="link_verification_message">Check your email and click the link to \nactivate your account</string>
    <string name="choose_a_different_mission">CHOOSE A DIFFERENT MISSION</string>
    <string name="choose_new_mission">CHOOSE NEW MISSION</string>
    <string name="choose_this_mission">CHOOSE THIS MISSION</string>
    <string name="continue_this_mission">CONTINUE THIS MISSION</string>
    <string name="see_report">See Report</string>
    <string name="sponsor">SPONSOR</string>
    <string name="sponsored_by_sponsor_name">aided by %1$s</string>
    <string name="contributors">Contributors</string>
    <string name="active">Active</string>
    <string name="amount_raised">Amount Raised</string>
    <string name="titlebar_choose_your_mission">Choose your mission</string>
    <string name="dots">%1$s…</string>
    <string name="rs">Rs %1$d</string>
    <string name="min">%1$d min</string>
    <string name="version_name">Version %1$s</string>
    <string name="interest_become_sponsor">Interest in collaborating with SeSEVA as Aid Provider</string>
    <string name="report_bug_in">Report bug in SeSEVA %1$s</string>
    <string name="mission_n_deadline">%1$s that you were a part of got accomplished on %2$s.</string>
    <string name="mission_is_accomplished">%1$s is accomplished</string>
    <string name="mission_closes_in">Mission closes in</string>
    <string name="days">days</string>
    <string name="know_more">KNOW MORE</string>
    <string name="continue_text">CONTINUE</string>
    <string name="you_are_on">You are on</string>
    <string name="you_are_on_2">You are on %1$s mission</string>
    <string name="you_raised">You raised</string>
    <string name="great_work">Great work!!</string>
    <string name="this_mission_has">This mission has</string>
    <string name="sponsored_by">Sponsored by</string>
    <string name="hurrah">Hurrah !!</string>
    <string name="total_amount_raised">Total amount raised</string>
    <string name="view_report">VIEW REPORT</string>
    <string name="let_s_choose_a_new_mission">LET\'S CHOOSE A NEW MISSION</string>
    <string name="allow">ALLOW</string>
    <string name="data_collection_and_usage_disclosure">Data collection and usage disclosure</string>
    <string name="grant_usage_access">Grant usage access</string>
    <string name="reason_d_o_o_a">SeSEVA requires this permission to diaplay a blocking screen that will warn you when you are about to break a SeSEVA Rule</string>
    <string name="faqs">FAQs</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="report_bug">Report Bug</string>
    <string name="permissions">Permissions</string>
    <string name="display_over_other_apps">Permission to display over other apps</string>
    <string name="autostart_permission_body">SeSEVA requires this permission to restart the foreground service and processes in case your phone\'s operating system kills them.</string>
    <string name="autostart_permission_body2">If this permission is found to be necessary for your device, you will be taken to the permission screen in settings, else to SeSEVA home screen.</string>
    <string name="check_grant">check and grant</string>
    <string name="opps">OPPS</string>
    <string name="usage_access_is_mandatory">Usage access is mandatory</string>
    <string name="delete_account">delete account</string>
    <string name="permission_mandatory_dialog_body">Usage access permission is required for the core functionality of SeSeva. Without it you can\'t proceed further.</string>
</resources>