<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_height="wrap_content"
    android:background="#383838"
    >
<TextView
    android:id="@+id/opps_text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/opps"
    style="@style/subtitle_2"
    android:textColor="@color/disabled_text"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/opps_text"
        app:layout_constraintTop_toBottomOf="@id/opps_text"
        android:text="@string/usage_access_is_mandatory"
        style="@style/subtitle_1"
        android:textColor="@color/primary_text"/>

    <TextView
        android:id="@+id/body"
        style="@style/body_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/permission_mandatory_dialog_body"
        android:textColor="@color/secondary_text"
        app:layout_constraintTop_toBottomOf="@id/title"
        tools:layout_editor_absoluteX="16dp" />
    <Button
        android:id="@+id/delete_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_account"
        style="@style/button"
        android:textColor="@color/secondary_text"
        android:background="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/body"
        android:layout_marginTop="24dp"/>
    <Button
        android:id="@+id/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:textColor="@color/colorPrimary"
        style="@style/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/body"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@null"
        android:layout_marginTop="24dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>