<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/common_background">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/permission_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".drawoverotherapps.DOOAFragment">

            <Button
                android:id="@+id/allow"
                style="@style/button"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/login_change_email"
                android:text="@string/allow"
                android:textColor="@color/colorPrimary"
                app:layout_constraintBottom_toTopOf="@+id/ask_me_later"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView19"
                style="@style/body_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="40dp"
                android:text="@string/permissions"
                android:textColor="@color/secondary_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView20"
                style="@style/subtitle_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/display_over_other_apps"
                android:textColor="@color/primary_text"
                app:layout_constraintStart_toStartOf="@+id/textView19"
                app:layout_constraintTop_toBottomOf="@+id/textView19" />

            <TextView
                android:id="@+id/textView6"
                style="@style/subtitle_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/reason_d_o_o_a"
                android:textColor="@color/disabled_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView20" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/appCompatImageView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6"
                app:srcCompat="@drawable/ic_guide_usage_access" />

            <Button
                android:id="@+id/ask_me_later"
                style="@style/button"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_marginBottom="24dp"
                android:background="@null"
                android:text="ASK ME LATER"
                android:textColor="@color/disabled_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.524"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <View
            android:id="@+id/skrim1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="284dp"
            android:background="@color/skrim"
            android:visibility="gone" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>