<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="LastMissionCompletedViewModel"
            type="com.example.us0.home.lastmission.LastMissionCompletedViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:background="@color/common_background">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{LastMissionCompletedViewModel.userName}"
            app:layout_constraintBottom_toBottomOf="@+id/textView8"
            app:layout_constraintStart_toEndOf="@+id/textView8"
            tools:text="UserName"/>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="48dp"
            android:text="@string/welcome_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hurrah"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{LastMissionCompletedViewModel.lastMissionName}"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/textView9"
            tools:text="Mission name met it's goal"/>

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{LastMissionCompletedViewModel.personalContribution}"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/textView10"
            tools:text="You raised Rs1000 for this charity"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/appCompatImageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatImageView7"
            app:srcCompat="@drawable/users_symbol" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/appCompatImageView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/textView11"
            app:srcCompat="@drawable/rupee_symbol" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@{LastMissionCompletedViewModel.totalMoneyRaised}"
            app:layout_constraintStart_toEndOf="@+id/appCompatImageView7"
            app:layout_constraintTop_toBottomOf="@+id/textView11"
            tools:text="10000" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_amount_raised"
            app:layout_constraintStart_toStartOf="@+id/textView12"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_report"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView11" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{LastMissionCompletedViewModel.contributors}"
            app:layout_constraintStart_toEndOf="@+id/appCompatImageView6"
            app:layout_constraintTop_toBottomOf="@+id/textView13"
            tools:text="150 total contributors"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/appCompatImageView8"
            android:layout_width="240dp"
            android:layout_height="240dp"
            app:layout_constraintBottom_toTopOf="@+id/choose_this_mission"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_screen_10_dolphin" />

        <Button
            android:id="@+id/choose_this_mission"
            style="@style/button"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginBottom="36dp"
            android:background="@drawable/login_resend_active"
            android:onClick="@{()->LastMissionCompletedViewModel.goToHome}"
            android:text="@string/let_s_choose_a_new_mission"
            android:textColor="@color/nav_color"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="16dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>